# speech2text

./: README.md  pyproject.toml
.github/workflows/: check_types.yml
message_recognizer-bot/: pyproject.toml
message_recognizer-bot/src/: requirements.txt  voice_message_encrypt.py
src/: playground.ipynb  test.py  tokenizer_config.json  train.ipynb  vocab.json
src/telegram-slav-gosh/: voice_message_encrypt.py
